peaufinage du makefile et des logs et du daemon.js

--- a/srcs/index.html
+++ b/srcs/index.html
@@ -1,7 +1,8 @@
-
 <html>
 	<head>
+		<title>Taskmaster</title>
 		<meta http-equiv="content-type" content="text/html; charset=utf-8">	<script src="socket.io.js"></script>
+		<script src="socket.io.js"></script>
 		<script src="client.js"></script>
 	</head>
 	<body>
