ajout support affichage de tous les fichiers du dossier racine dans le server pour les logs

--- a/srcs/webserver/index.html
+++ b/srcs/webserver/index.html
@@ -5,18 +5,18 @@
 		<meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 	    <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
 	    <title>Untitled</title>
-	    <link rel="stylesheet" href="bootstrap.min.css">
+	    <link rel="stylesheet" href="srcs/webserver/bootstrap.min.css">
 	    <!-- <link rel="stylesheet" href="css">
 	    <link rel="stylesheet" href="css(1)"> -->
-	    <link rel="stylesheet" href="Article-Dual-Column.css">
-	    <link rel="stylesheet" href="Header-Blue.css">
-	    <link rel="stylesheet" href="Navigation-with-Button.css">
-	    <link rel="stylesheet" href="styles.css">
-		<script src="jquery-3.4.1.min.js"></script>
-		<script src="bootstrap.min.js"></script>
-		<script id="bs-live-reload" data-sseport="57665" data-lastchange="1574119058567" src="livereload.js"></script>
-		<script src="socket.io.js"></script>
-		<script src="client.js"></script>
+	    <link rel="stylesheet" href="srcs/webserver/Article-Dual-Column.css">
+	    <link rel="stylesheet" href="srcs/webserver/Header-Blue.css">
+	    <link rel="stylesheet" href="srcs/webserver/Navigation-with-Button.css">
+	    <link rel="stylesheet" href="srcs/webserver/styles.css">
+		<script src="srcs/webserver/jquery-3.4.1.min.js"></script>
+		<script src="srcs/webserver/bootstrap.min.js"></script>
+		<script id="bs-live-reload" data-sseport="57665" data-lastchange="1574119058567" src="srcs/webserver/livereload.js"></script>
+		<script src="srcs/webserver/socket.io.js"></script>
+		<script src="srcs/webserver/client.js"></script>
 	</head>
 	<body>
 	    <ul class="list-group"></ul>
