Ajout titre + bouton taskmaster log

--- a/srcs/webserver/index.html
+++ b/srcs/webserver/index.html
@@ -22,6 +22,15 @@
 	    <ul class="list-group"></ul>
 	    <div class="card">
 	        <div class="card-body">
+				<button id="log_button" class="btn btn-primary" type="button" style="right: 0;position: absolute;">Taskmaster logs</button>
+				<div class="row" style="align-items: center;text-align: center;">
+					<div class="col"></div>
+					<div class="col" style="/*align-items: center;*/">
+						<h1 style="display: block;">Heading</h1>
+					</div>
+					<div class="col"></div>
+					<div class="col" style="align-self: right;/*display: inline;*/position: absolute;right: 0;"></div>
+				</div>
 	            <div class="row" style="align-items: center;">
 	                <div class="col-xl-2 offset-xl-0">
 	                    <h2>Process name</h2>
