--- a/srcs/webserver/index.html
+++ b/srcs/webserver/index.html
@@ -6,8 +6,6 @@
 	    <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
 	    <title>Untitled</title>
 	    <link rel="stylesheet" href="srcs/webserver/bootstrap.min.css">
-	    <!-- <link rel="stylesheet" href="css">
-	    <link rel="stylesheet" href="css(1)"> -->
 	    <link rel="stylesheet" href="srcs/webserver/Article-Dual-Column.css">
 	    <link rel="stylesheet" href="srcs/webserver/Header-Blue.css">
 	    <link rel="stylesheet" href="srcs/webserver/Navigation-with-Button.css">
@@ -22,16 +20,17 @@
 	    <ul class="list-group"></ul>
 	    <div class="card">
 	        <div class="card-body">
-				<button id="log_button" class="btn btn-primary" type="button" style="right: 0;position: absolute;">Taskmaster logs</button>
+				<button id="log_button" class="btn btn-primary" type="button" style="right: 15px;position: absolute;">Taskmaster logs</button>
 				<div class="row" style="align-items: center;text-align: center;">
 					<div class="col"></div>
-					<div class="col" style="/*align-items: center;*/">
-						<h1 style="display: block;">Heading</h1>
+					<div class="col">
+						<h1 style="display: block;">Taskmaster</h1>
 					</div>
 					<div class="col"></div>
-					<div class="col" style="align-self: right;/*display: inline;*/position: absolute;right: 0;"></div>
+					<div class="col" style="align-self: right;position: absolute;right: 0;"></div>
 				</div>
-	            <div class="row" style="align-items: center;">
+				<p></p>
+	            <div class="row" style="align-items: center; background-color: black; ">
 	                <div class="col-xl-2 offset-xl-0">
 	                    <h2>Process name</h2>
 	                </div>
