Ajout timestop et exithandler

--- a/srcs/webserver/index.html
+++ b/srcs/webserver/index.html
@@ -20,7 +20,7 @@
 	    <ul class="list-group"></ul>
 	    <div class="card">
 	        <div class="card-body">
-				<button id="log_button" class="btn btn-primary" type="button" style="right: 15px;position: absolute;">Taskmaster logs</button>
+				<button id="log_button" class="btn btn-primary" type="button" style="right: 15px;position: absolute;">📃</button>
 				<div class="row" style="align-items: center;text-align: center;">
 					<div class="col"></div>
 					<div class="col">
